# Langchain1

./: .gitignore  pyproject.toml
1.1-openai/: 1.1.1-GettingStarted.ipynb
3.2-DataIngestion/: 3.2-DataIngestion.ipynb
3.3-Data Trnasformer/: 3.3-RecuriveCharactertextsplitter.ipynb  3.4-CharacterTextsplitter.ipynb
