[project]
name = "langchain-actual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "aiohttp>=3.14.1",
    "anthropic>=0.116.0",
    "apache-airflow>=3.2.2",
    "azure-storage-blob>=12.30.0",
    "beautifulsoup4>=4.15.0",
    "bitsandbytes>=0.49.2",
    "black>=26.5.1",
    "boto3>=1.43.40",
    "catboost>=1.2.10",
    "chainlit>=2.11.1",
    "chromadb>=1.5.9",
    "cohere>=7.0.5",
    "dask>=2026.6.0",
    "datasets>=5.0.0",
    "duckdb>=1.5.4",
    "dvc>=3.67.1",
    "evaluate>=0.4.6",
    "evidently>=0.7.21",
    "faiss-cpu>=1.14.3",
    "faker>=40.28.1",
    "fastapi>=0.139.0",
    "fastparquet>=2026.5.0",
    "flake8>=7.3.0",
    "gensim>=4.4.0",
    "google-cloud-storage>=3.12.0",
    "gradio>=6.19.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "isort>=8.0.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.6.1",
    "kafka-python>=3.0.7",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.9.7",
    "lightgbm>=4.6.0",
    "llama-index>=0.14.23",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "matplotlib>=3.11.0",
    "mistralai>=2.5.1",
    "mlflow>=1.27.0",
    "mypy>=2.1.0",
    "nltk>=3.9.4",
    "notebook>=7.6.0",
    "numpy>=2.5.0",
    "ollama>=0.6.2",
    "openai>=2.44.0",
    "opencv-python>=5.0.0.93",
    "openpyxl>=3.1.5",
    "optimum>=2.2.0",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "pillow>=12.3.0",
    "pinecone>=9.1.0",
    "playwright>=1.61.0",
    "plotly>=5.24.1",
    "polars>=1.42.1",
    "pre-commit>=4.6.0",
    "prefect>=3.7.6",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymilvus>=3.0.0",
    "pymongo>=4.17.0",
    "pyspark>=4.1.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "ray>=2.56.0",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "selenium>=4.45.0",
    "sentence-transformers>=5.6.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.14",
    "sqlalchemy>=2.0.51",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
    "tenacity>=9.1.4",
    "tensorflow>=2.21.0",
    "tiktoken>=0.13.0",
    "tokenizers>=0.22.2",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "trl>=1.7.0",
    "uvicorn>=0.49.0",
    "wandb>=0.28.0",
    "weaviate-client>=4.16.2",
    "xgboost>=3.3.0",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
]
