[project]
name = "langchain1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate",
    "aiohttp",
    "anthropic",
    "arxiv",
    "azure-storage-blob",
    "beautifulsoup4",
    "black",
    "boto3",
    "bs4",
    "catboost",
    "chainlit",
    "chromadb",
    "cohere",
    "datasets",
    "duckdb",
    "dvc",
    "evaluate",
    "evidently",
    "faiss-cpu",
    "faker",
    "fastapi",
    "fastparquet",
    "flake8",
    "gensim",
    "google-cloud-storage",
    "gradio",
    "groq",
    "httpx",
    "ipykernel",
    "isort",
    "jupyter",
    "jupyterlab",
    "kafka-python",
    "langchain",
    "langchain-chroma>=1.1.0",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-text-splitters",
    "langgraph",
    "langsmith",
    "lightgbm",
    "llama-index",
    "loguru",
    "lxml",
    "matplotlib",
    "mistralai",
    "mlflow",
    "mypy",
    "nltk",
    "notebook",
    "numba>=0.60",
    "numpy",
    "ollama",
    "openai",
    "opencv-python",
    "openpyxl",
    "optimum",
    "optuna",
    "pandas",
    "peft",
    "pillow",
    "pinecone-client",
    "plotly",
    "polars",
    "pre-commit",
    "prefect",
    "psycopg2-binary",
    "pyarrow",
    "pymilvus",
    "pymongo",
    "pymupdf",
    "pypdf",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "python-dotenv",
    "pyyaml",
    "qdrant-client",
    "ray",
    "redis",
    "requests",
    "rich",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sentence-transformers",
    "sentencepiece",
    "spacy",
    "sqlalchemy",
    "streamlit",
    "tiktoken",
    "tokenizers",
    "tqdm",
    "transformers",
    "trl",
    "uvicorn",
    "wandb",
    "weaviate-client",
    "wikipedia",
    "xgboost",
    "xlrd",
    "xlsxwriter",
]
